--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,12 @@
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
-
+html, body {
+  width: 100%;
+  box-sizing: border-box;
+  min-height: 100vh;
+  overflow-x: hidden;
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
